-Added test jsons for all tipe of cards -Small tweaks to the preliminary tests -Improved model and fixed errors and bugs